After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 710168 - ges-video-source: Negotiation problem for interlaced videos
ges-video-source: Negotiation problem for interlaced videos
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-editing-services
1.2.0
Other All
: Normal normal
: 1.2.0
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-10-15 08:22 UTC by Kishore Arepalli
Modified: 2013-11-19 15:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix for negotiation problem (2.03 KB, patch)
2013-10-15 08:41 UTC, Kishore Arepalli
none Details | Review
interlaced test file dot dump graph (1.13 MB, image/png)
2013-11-18 10:05 UTC, Kishore Arepalli
  Details
video-uri-source: Handle interlaced videos (2.55 KB, patch)
2013-11-18 16:43 UTC, Thibault Saunier
committed Details | Review

Description Kishore Arepalli 2013-10-15 08:22:07 UTC
"deinterlace" element needs to be added to avoid negotiation issue
Comment 1 Kishore Arepalli 2013-10-15 08:41:23 UTC
Created attachment 257330 [details] [review]
Fix for negotiation problem

Adding deinterlace element fixes the problem
Comment 2 Thibault Saunier 2013-11-16 23:04:43 UTC
Isn't that the job of decodebin to add this element?

Can you provide a sample where that issue happens please?
Comment 3 Tim-Philipp Müller 2013-11-16 23:23:20 UTC
No, interlaced raw video is decoded raw video, decodebin's job is done at that point. playbin adds a deinterlacer on demand.
Comment 4 Kishore Arepalli 2013-11-18 10:05:56 UTC
Created attachment 260096 [details]
interlaced test file dot dump graph

Dot dump graph

link for interlaced test file to reproduce the issue

https://docs.google.com/uc?export=download&id=0BwxewtoMURnSUVpsVW9MdjVTREE
Comment 5 Thibault Saunier 2013-11-18 16:43:41 UTC
Created attachment 260145 [details] [review]
video-uri-source: Handle interlaced videos
Comment 6 Thibault Saunier 2013-11-19 14:29:22 UTC
@kishore could you please test that last patch so I just merge it afterward?
Comment 7 Kishore Arepalli 2013-11-19 15:28:52 UTC
Yes, It works. Thanks for patch :)

(In reply to comment #6)
> @kishore could you please test that last patch so I just merge it afterward?
Comment 8 Thibault Saunier 2013-11-19 15:38:20 UTC
Attachment 260145 [details] pushed as a73644a - video-uri-source: Handle interlaced videos