video-uri-source: Handle interlaced videos

https://bugzilla.gnome.org/show_bug.cgi?id=710168